Final project with DTO classes
- created new DTO record classes;
- optimized mapper classes;
- updated services;
- updated controllers;
- added GlobalExceptionHandler;
- updated and optimized test classes;
- optimized TestConstants;
- optimized all imports
- added new dependency for validation;
- added validation for DTO fields
- faculties colors changed to HEX-pattern