@@ -10,7 +10,9 @@ import org.springframework.http.MediaType;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.web.server.ResponseStatusException;
+import ru.hogwarts.school.dto.FacultyCreateDto;
 import ru.hogwarts.school.dto.FacultyDto;
+import ru.hogwarts.school.dto.FacultyUpdateDto;
 import ru.hogwarts.school.dto.StudentDto;
 import ru.hogwarts.school.service.FacultyService;
 import ru.hogwarts.school.service.UniversityManagementService;
@@ -19,6 +21,7 @@ import java.util.Collections;
 import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
@@ -44,16 +47,8 @@ public class FacultyControllerWebMvcTest {
 
     @BeforeEach
     void setUp() {
-        testFacultyDto = new FacultyDto();
-        testFacultyDto.setId(EXISTING_ID);
-        testFacultyDto.setName(FacultyConst.TEST_NAME);
-        testFacultyDto.setColor(FacultyConst.TEST_COLOR);
-        testFacultyDto.setStudentIds(Collections.emptyList());
-
-        testStudentDto = new StudentDto();
-        testStudentDto.setId(1L);
-        testStudentDto.setName("Test Student");
-        testStudentDto.setAge(17);
+        testFacultyDto = new FacultyDto(EXISTING_ID, FacultyConst.TEST_NAME, FacultyConst.TEST_COLOR, Collections.emptyList());
+        testStudentDto = new StudentDto(1L, "Test Student", 17, null);
     }
 
     // ========== POSITIVE TESTS ==========
@@ -62,14 +57,14 @@ public class FacultyControllerWebMvcTest {
     @DisplayName("Positive. Should create Faculty successfully")
     void createFaculty_validData_shouldReturnFaculty() throws Exception {
         // Given
-        String facultyJson = createValidFacultyJson(FacultyConst.TEST_NAME, FacultyConst.TEST_COLOR);
-        when(facultyService.createFaculty(any(FacultyDto.class))).thenReturn(testFacultyDto);
+        String facultyJson = createValidFacultyCreateJson(FacultyConst.TEST_NAME, FacultyConst.TEST_COLOR);
+        when(facultyService.createFaculty(any(FacultyCreateDto.class))).thenReturn(testFacultyDto);
 
         // When & Then
         mockMvc.perform(post(FacultyConst.ENDPOINT)
                        .content(facultyJson)
                        .contentType(MediaType.APPLICATION_JSON))
-               .andExpect(status().isOk())
+               .andExpect(status().isCreated())
                .andExpect(jsonPath("$.id").value(EXISTING_ID))
                .andExpect(jsonPath("$.name").value(FacultyConst.TEST_NAME))
                .andExpect(jsonPath("$.color").value(FacultyConst.TEST_COLOR))
@@ -97,32 +92,31 @@ public class FacultyControllerWebMvcTest {
     @DisplayName("Positive. Should Update Faculty successfully")
     void updateFaculty_existingFaculty_shouldReturnUpdatedFaculty() throws Exception {
         // Given
-        FacultyDto updatedFacultyDto = new FacultyDto();
-        updatedFacultyDto.setId(EXISTING_ID);
-        updatedFacultyDto.setName(FacultyConst.UPDATED_WEB_NAME);
-        updatedFacultyDto.setColor(FacultyConst.UPDATED_WEB_COLOR);
-        updatedFacultyDto.setStudentIds(List.of(1L, 2L));
+        FacultyDto updatedFacultyDto = new FacultyDto(EXISTING_ID, FacultyConst.UPDATED_NAME, FacultyConst.UPDATED_COLOR, List.of(1L, 2L));
 
-        when(facultyService.updateFaculty(any(FacultyDto.class))).thenReturn(updatedFacultyDto);
+        // Используем eq() для точного соответствия ID и any() для DTO
+        when(facultyService.updateFaculty(eq(EXISTING_ID), any(FacultyUpdateDto.class))).thenReturn(updatedFacultyDto);
 
-        String updateFacultyJson = createValidFacultyJson(FacultyConst.UPDATED_WEB_NAME, FacultyConst.UPDATED_WEB_COLOR, EXISTING_ID);
+        String updateFacultyJson = createValidFacultyUpdateJson(FacultyConst.UPDATED_NAME, FacultyConst.UPDATED_COLOR);
 
         // When & Then
-        mockMvc.perform(put(FacultyConst.ENDPOINT)
+        mockMvc.perform(put(FacultyConst.ENDPOINT + "/{id}", EXISTING_ID)
                        .content(updateFacultyJson)
                        .contentType(MediaType.APPLICATION_JSON))
                .andExpect(status().isOk())
-               .andExpect(jsonPath("$.name").value(FacultyConst.UPDATED_WEB_NAME))
-               .andExpect(jsonPath("$.color").value(FacultyConst.UPDATED_WEB_COLOR))
+               .andExpect(jsonPath("$.id").value(EXISTING_ID))
+               .andExpect(jsonPath("$.name").value(FacultyConst.UPDATED_NAME))
+               .andExpect(jsonPath("$.color").value(FacultyConst.UPDATED_COLOR))
+               .andExpect(jsonPath("$.studentIds").isArray())
                .andDo(print());
     }
 
     @Test
     @DisplayName("Positive. Should Delete Faculty successfully")
-    void deleteFaculty_existingFaculty_shouldReturnOk() throws Exception {
+    void deleteFaculty_existingFaculty_shouldReturnNoContent() throws Exception {
         // When & Then
         mockMvc.perform(delete(FacultyConst.ENDPOINT + "/{id}", EXISTING_ID))
-               .andExpect(status().isOk())
+               .andExpect(status().isNoContent())
                .andDo(print());
     }
 
@@ -148,12 +142,7 @@ public class FacultyControllerWebMvcTest {
     @DisplayName("Positive. Should return faculties filtered by Color")
     void getFacultiesByColor_existingColor_shouldReturnFilteredFaculties() throws Exception {
         // Given
-        FacultyDto greenFacultyDto = new FacultyDto();
-        greenFacultyDto.setId(2L);
-        greenFacultyDto.setName(FacultyConst.GREEN_NAME);
-        greenFacultyDto.setColor(FacultyConst.GREEN_COLOR);
-        greenFacultyDto.setStudentIds(Collections.emptyList());
-
+        FacultyDto greenFacultyDto = new FacultyDto(2L, FacultyConst.GREEN_NAME, FacultyConst.GREEN_COLOR, Collections.emptyList());
         List<FacultyDto> faculties = Collections.singletonList(greenFacultyDto);
         when(facultyService.getFacultiesByColor(FacultyConst.GREEN_COLOR)).thenReturn(faculties);
 
@@ -202,33 +191,26 @@ public class FacultyControllerWebMvcTest {
     }
 
     @Test
-    @DisplayName("Positive. Should create faculty with student IDs")
-    void createFaculty_withStudentIds_shouldReturnFacultyWithStudentIds() throws Exception {
+    @DisplayName("Positive. Should create faculty with valid hex color")
+    void createFaculty_withValidHexColor_shouldReturnFaculty() throws Exception {
         // Given
-        FacultyDto facultyWithStudentsDto = new FacultyDto();
-        facultyWithStudentsDto.setId(EXISTING_ID);
-        facultyWithStudentsDto.setName("Faculty with Students");
-        facultyWithStudentsDto.setColor("Purple");
-        facultyWithStudentsDto.setStudentIds(List.of(1L, 2L, 3L));
-
-        when(facultyService.createFaculty(any(FacultyDto.class))).thenReturn(facultyWithStudentsDto);
+        FacultyDto facultyWithValidColorDto = new FacultyDto(EXISTING_ID, "Faculty with Valid Color", "#FF5733", Collections.emptyList());
+        when(facultyService.createFaculty(any(FacultyCreateDto.class))).thenReturn(facultyWithValidColorDto);
 
         String facultyJson = """
                 {
-                    "name": "Faculty with Students",
-                    "color": "Purple",
-                    "studentIds": [1, 2, 3]
+                    "name": "Faculty with Valid Color",
+                    "color": "#FF5733"
                 }""";
 
         // When & Then
         mockMvc.perform(post(FacultyConst.ENDPOINT)
                        .content(facultyJson)
                        .contentType(MediaType.APPLICATION_JSON))
-               .andExpect(status().isOk())
-               .andExpect(jsonPath("$.name").value("Faculty with Students"))
-               .andExpect(jsonPath("$.color").value("Purple"))
+               .andExpect(status().isCreated())
+               .andExpect(jsonPath("$.name").value("Faculty with Valid Color"))
+               .andExpect(jsonPath("$.color").value("#FF5733"))
                .andExpect(jsonPath("$.studentIds").isArray())
-               .andExpect(jsonPath("$.studentIds.length()").value(3))
                .andDo(print());
     }
 
@@ -251,13 +233,13 @@ public class FacultyControllerWebMvcTest {
     @DisplayName("Negative. Should return 404 when updating non-existent Faculty")
     void updateFaculty_nonExistentId_shouldReturn404() throws Exception {
         // Given
-        when(facultyService.updateFaculty(any(FacultyDto.class)))
+        when(facultyService.updateFaculty(eq(NON_EXISTENT_ID), any(FacultyUpdateDto.class)))
                 .thenThrow(new ResponseStatusException(HttpStatus.NOT_FOUND, "Faculty not Found"));
 
-        String updateJson = createValidFacultyJson(FacultyConst.NON_EXISTENT_WEB_NAME, FacultyConst.NON_EXISTENT_COLOR, NON_EXISTENT_ID);
+        String updateJson = createValidFacultyUpdateJson(FacultyConst.NON_EXISTENT_NAME, FacultyConst.NON_EXISTENT_COLOR);
 
         // When & Then
-        mockMvc.perform(put(FacultyConst.ENDPOINT)
+        mockMvc.perform(put(FacultyConst.ENDPOINT + "/{id}", NON_EXISTENT_ID)
                        .content(updateJson)
                        .contentType(MediaType.APPLICATION_JSON))
                .andExpect(status().isNotFound())
@@ -321,27 +303,44 @@ public class FacultyControllerWebMvcTest {
     }
 
     @Test
-    @DisplayName("Negative. Should handle empty faculty data gracefully")
-    void createFaculty_emptyData_shouldHandleGracefully() throws Exception {
+    @DisplayName("Negative. Should return 400 for invalid color format")
+    void createFaculty_invalidColorFormat_shouldReturnBadRequest() throws Exception {
         // Given
-        FacultyDto emptyFacultyDto = new FacultyDto();
-        emptyFacultyDto.setId(EXISTING_ID);
-        emptyFacultyDto.setName(EMPTY_STRING);
-        emptyFacultyDto.setColor(EMPTY_STRING);
-        emptyFacultyDto.setStudentIds(Collections.emptyList());
-
-        when(facultyService.createFaculty(any(FacultyDto.class))).thenReturn(emptyFacultyDto);
-
-        String emptyJson = createValidFacultyJson(EMPTY_STRING, EMPTY_STRING);
+        String invalidColorJson = createValidFacultyCreateJson("Test Faculty", Validation.INVALID_HEX_COLOR);
 
         // When & Then
         mockMvc.perform(post(FacultyConst.ENDPOINT)
-                       .content(emptyJson)
+                       .content(invalidColorJson)
                        .contentType(MediaType.APPLICATION_JSON))
-               .andExpect(status().isOk())
-               .andExpect(jsonPath("$.name").value(EMPTY_STRING))
-               .andExpect(jsonPath("$.color").value(EMPTY_STRING))
-               .andExpect(jsonPath("$.studentIds").isArray())
+               .andExpect(status().isBadRequest())
+               .andDo(print());
+    }
+
+    @Test
+    @DisplayName("Negative. Should return 400 for empty name")
+    void createFaculty_emptyName_shouldReturnBadRequest() throws Exception {
+        // Given
+        String emptyNameJson = createValidFacultyCreateJson("", "#FFFFFF");
+
+        // When & Then
+        mockMvc.perform(post(FacultyConst.ENDPOINT)
+                       .content(emptyNameJson)
+                       .contentType(MediaType.APPLICATION_JSON))
+               .andExpect(status().isBadRequest())
+               .andDo(print());
+    }
+
+    @Test
+    @DisplayName("Negative. Should return 400 for too short name")
+    void createFaculty_tooShortName_shouldReturnBadRequest() throws Exception {
+        // Given
+        String shortNameJson = createValidFacultyCreateJson(Validation.TOO_SHORT_NAME, Validation.VALID_HEX_COLOR);
+
+        // When & Then
+        mockMvc.perform(post(FacultyConst.ENDPOINT)
+                       .content(shortNameJson)
+                       .contentType(MediaType.APPLICATION_JSON))
+               .andExpect(status().isBadRequest())
                .andDo(print());
     }
 
@@ -370,7 +369,7 @@ public class FacultyControllerWebMvcTest {
 
     // ========== HELPER METHODS ==========
 
-    private String createValidFacultyJson(String name, String color) {
+    private String createValidFacultyCreateJson(String name, String color) {
         return String.format("""
                 {
                     "name": "%s",
@@ -378,13 +377,12 @@ public class FacultyControllerWebMvcTest {
                 }""", name, color);
     }
 
-    private String createValidFacultyJson(String name, String color, Long id) {
+    private String createValidFacultyUpdateJson(String name, String color) {
         return String.format("""
                 {
-                    "id": %d,
                     "name": "%s",
                     "color": "%s"
-                }""", id, name, color);
+                }""", name, color);
     }
 
     private String createMalformedFacultyJson_missingBrace() {
